--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-* Add other relation methods to RelationGateway:
+* Add other relation methods to Relation::Gateway:
   * #summarize
   * #join w/block (theta-join)
